--- a/detective-frontend/src/index.css
+++ b/detective-frontend/src/index.css
@@ -75,9 +75,13 @@ body,
   padding: 0;
 }
 
-#root {
-  max-width: none; /* 혹시 다른 곳에서 다시 지정돼도 풀기 */
-}
+/* #root {
+  max-width: none; /* 혹시 다른 곳에서 다시 지정돼도 풀기
+} 
+*/
+html, body, #root { width: 100%; height: 100%; }
+#root { max-width: none; margin: 0; padding: 0; text-align: initial; }
+
 
 /* 배경색은 원하는 색으로 */
 body {
